Fix alignment

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 body {
     display: grid;
     grid-template-columns: clamp(200px, 15rem, 250px) 1fr;
-    grid-template-rows: 200px 1fr;
+    grid-template-rows: 225px 1fr;
     height: 100vh;
 }
 
@@ -153,6 +153,7 @@ body {
     grid-auto-flow: column;
     white-space: pre-line;
     grid-gap: 20px;
+    align-items: center;
 }
 
 .down button {
